<resources>
    <string name="app_name" translatable="false">ErdMovee</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="selanjutnya">Next</string>
    <string name="skip">Skip</string>
    <string name="join_now">Join Now</string>
    <string name="search_for_tons_nof_movies_on_the_go">Search for tons of movies on the go</string>
    <string name="mark_your_favorite_movie">Mark your favorite movie</string>
    <string name="book_a_movie_in_a_few_clicks">Cheaper to rent selected movie\nin a few clicks</string>
    <string name="minimal_8_karakter">At least 8 Characters</string>
    <string name="contoh_test_gmail_com">Example: example@mail.com</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tnc_auth"><![CDATA[By Entering you agree to the Terms & Conditions and Privacy Policy ErdMovee]]></string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="movie_poster">movie poster</string>
    <string name="hello_user">Hi, %1$s</string>
    <string name="popular">Popular</string>
    <string name="casts">Casts</string>
    <string name="recommendation_s">Recommendation(s)</string>
    <string name="release_date">Release Date:</string>
    <string name="length">Length:</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="total_bayar">Total Price</string>
    <string name="password_tidak_valid">Invalid Password</string>
    <string name="email_tidak_valid">Invalid Email</string>
    <string name="rent">Rent</string>
    <string name="checkout">Checkout</string>
    <string name="pay">Pay</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_more"><![CDATA[See More >]]></string>
    <string name="rent_for">Rent For?</string>
    <string name="movies_to_rent">Movie(s) to rent</string>
    <string name="payment">Payment</string>
    <string name="coins_balance">Coins Balance:</string>
    <string name="insufficient_funds_nclick_to_top_up">Insufficient funds\nClick to Top up</string>
    <string name="quote" translatable="false">\" %1$s \"</string>
    <string name="rent_now">Rent Now</string>
    <string name="add_cart">+ Cart</string>
    <string name="tap_twice_to_exit">Tap Twice to Exit</string>
    <string name="click_to_top_up">Click to Top up</string>
    <string name="done">Done</string>
    <string name="pick_your_top_up">Pick Your Top Up</string>
    <string name="_500_coins" translatable="false">500 Coins</string>
    <string name="_1000_coins" translatable="false">1000 Coins</string>
    <string name="_1500_coins" translatable="false">1500 Coins</string>
    <string name="_2000_coins" translatable="false">2000 Coins</string>
    <string name="_2500_coins" translatable="false">2500 Coins</string>
    <string name="_3000_coins" translatable="false">3000 Coins</string>
    <string name="or_write_down_how_much_you_desire">or write down how much you desire</string>
    <string name="selamat_datang">Selamat Datang! %1$s</string>
    <string name="login_gagal">Login Failed %1$s</string>
    <string name="pilih_gambar">Pick Image</string>
    <string name="galeri">Gallery</string>
    <string name="kamera">Camera</string>
    <string name="field_tidak_boleh_kosong">Please fill the field</string>
    <string name="profile_gagal_disimpan">"Failed, %1$s"</string>
    <string name="hello_home">Hi, %1$s</string>
    <string name="failed_to_logout">Kesalahan Saat Logout</string>
    <string name="success_to_logout">User Logout, Will Miss U Y^-^</string>
    <string name="logout_title_dialog">Are You Sure?</string>
    <string name="logout_confirmation_message">You Sure Want to Logout? We Will Miss U (T-T)</string>
    <string name="ya">Yes</string>
    <string name="no">No</string>
    <string name="profile_title_dialog">Yakin Tidak Upload Gambar Untuk Foto Profil?</string>
    <string name="profile_confirmation_message">Tekan tombol lingkaran diatas untuk mengunggah foto profil</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string name="empty">Empty</string>
    <string name="movie_not_found">Not Found</string>
    <string name="refresh">Refresh</string>
    <string name="search_first_state">Explore wonderful movies around</string>
    <string name="search_first_state_title">Explore</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="minutes">%1$s Minutes</string>
    <string name="_10" translatable="false">%1$s /10</string>
    <string name="add_to_favorite">Bookmark</string>
    <string name="remove_from_favorite">Bookmarked</string>
    <string name="price_per_day">%1$s /Day</string>
    <string name="cart_quantity_item">%1$s Day</string>
    <string name="its_empty_lets_pick_some_movie_to_rent">Its Empty! Lets pick some Movie to rent</string>
    <string name="transaction_movie_amount">%1$s Movie</string>
    <string name="success">Success</string>
    <string name="amount_coins" translatable="false">%1$s Coins</string>
    <string name="pembayaran_gagal_silahkan_coba_kembali">Payment Failed, please try again later</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="payment_success">Payment Success</string>
    <string name="insufficient_balance">Insufficient Balance</string>
    <string name="logout">Logout</string>
    <string name="with_email">with Email</string>
    <string name="please_complete_your_profile">Please complete your profile</string>
    <string name="feature_soon">FEATURE SOON</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="nominal">Nominal</string>
    <string name="profile">Profile</string>
    <string name="rent_movie">Rent Movie</string>
    <string name="price_rupiah" translatable="false">Rp. %1$d</string>
    <string name="price_coins" translatable="false">%1$d Coin(s)</string>
</resources>