<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_login"
    tools:context=".ui.prelogin.LoginFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="with Email"
        app:subtitleCentered="true"
        app:subtitleTextAppearance="@style/ToolbarSubtitle"
        app:subtitleTextColor="?attr/colorOutline"
        app:title="@string/login"
        app:titleCentered="true"
        app:titleMarginTop="16dp"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="?attr/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:hint="@string/email"
        app:boxBackgroundColor="?attr/colorPrimaryContainer"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:helperText="@string/contoh_test_gmail_com"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tif_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        app:boxBackgroundColor="?attr/colorPrimaryContainer"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:helperText="@string/minimal_8_karakter"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tif_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/FixButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tnc" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_register"
        app:layout_constraintEnd_toStartOf="@id/btn_register"
        app:layout_constraintTop_toTopOf="@id/btn_register"
        tools:text="Don't have account yet?" />

    <TextView
        android:id="@+id/tv_tnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        tools:text="@string/tnc_auth" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="320dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_loading" />
</androidx.constraintlayout.widget.ConstraintLayout>