<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_register"
    tools:context=".ui.prelogin.ProfileFragment">

    <ImageView
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:alpha="0.2"
        android:focusable="false"
        android:src="@drawable/ic_person_outline_320"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_profile" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="?attr/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_person_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_profile"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/please_complete_your_profile"
        app:subtitleCentered="true"
        app:subtitleTextAppearance="@style/ToolbarSubtitle"
        app:subtitleTextColor="?attr/colorOutline"
        app:title="@string/profile"
        app:titleCentered="true"
        app:titleMarginTop="16dp"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:titleTextColor="?attr/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:hint="@string/username"
        app:boxBackgroundColor="?attr/colorPrimaryContainer"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tif_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        style="@style/FixButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_username" />

    <TextView
        android:id="@+id/tv_tnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_done"
        tools:text="@string/tnc_auth" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="320dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_loading" />
</androidx.constraintlayout.widget.ConstraintLayout>