<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_register"
    tools:context=".ui.payment.CheckoutFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:alpha="0.2"
        android:focusable="false"
        android:src="@drawable/ic_coins_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_checkout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/checkout"
        app:titleTextAppearance="@style/ToolbarTitles" />

    <TextView
        android:id="@+id/tv_title_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/movies_to_rent"
        android:textAppearance="@style/TextDetailHead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_checkout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_checkout_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider_checkout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_movies"
        app:layout_constraintVertical_bias="1.0"
        tools:itemCount="3"
        tools:listitem="@layout/checkout_list_item" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_checkout"
        android:layout_width="399dp"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/tv_title_payment"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/payment"
        android:textAppearance="@style/TextDetailHead"
        app:layout_constraintBottom_toTopOf="@+id/card_topup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_topup"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toTopOf="@+id/action_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_payments_24"
                app:tint="?attr/colorSecondary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/coins_balance"
                    app:tint="?attr/colorSecondary" />

                <TextView
                    android:id="@+id/tv_coins_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textSize="26sp"
                    app:tint="?attr/colorSecondary"
                    tools:text="1.400wdsdasdw" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_topup"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/insufficient_funds_nclick_to_top_up"
                android:textColor="?attr/colorOnSurface"
                android:textSize="10sp"
                app:backgroundTint="?attr/colorPrimaryContainer"
                app:chipCornerRadius="12dp"
                app:chipIconTint="?attr/colorPrimary"
                app:chipMinTouchTargetSize="0dp"
                app:chipStrokeWidth="0dp"
                app:cornerRadius="12dp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/total_bayar"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textSize="16sp"
                    tools:text="Rp. 20.000.0000" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:textAppearance="@style/ButtonTextStyle"
                app:layout_constraintTop_toBottomOf="@+id/tv_orregister" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>